Bump version to 2.4.1: improve Linux desktop integration by replacing reflective `XToolkit` configuration with application properties, update dependencies, and enhance `Inicio` test coverage.